--- a/Source/Services/Flight/Flights.Api/Flights.Api.csproj
+++ b/Source/Services/Flight/Flights.Api/Flights.Api.csproj
@@ -8,10 +8,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\Core\Core.csproj" />
+      <ProjectReference Include="..\Flights\Flights.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Carter" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
